@@ -68,7 +68,7 @@ EOW
     }
 
 
-    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.042.
+    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.043.
     use strict;
     use warnings;
 
@@ -84,7 +84,7 @@ EOW
         "Dan Book <dbook\@cpan.org>"
       ],
       "dist_name" => "Perl-Critic-Freenode",
-      "dist_version" => "0.013",
+      "dist_version" => "0.014",
       "license" => "artistic_2",
       "module_name" => "Perl::Critic::Freenode",
       "recursive_test_files" => 1,
